# opentrons_protocols

./: .gitignore  CONTRIBUTING.md  README.md
custom_labware/: eppendorf_96f_microplate_350ul.json  nunc_96_wellplate_optical_bottom_400ul.json
protocols/OT-2/colony_pick/: colony_pick.py  example_colony_positions.yml
protocols/OT-2/moclo/: moclo.py
protocols/OT-Flex/ColonyPlayground/Amira's Code/: BCA Draft
protocols/OT-Flex/ColonyPlayground/BCA_assay_microplate/: BCA_protein_assay.py  README.md
protocols/OT-Flex/ColonyPlayground/BCA_assay_tuberack/: BCA assay tuberack.py  README.md
protocols/OT-Flex/ColonyPlayground/BSA_dilution/: BSA_dilutions.py  READ.md
protocols/OT-Flex/ColonyPlayground/Bing's Code/BCA Assay/: READ.md  (+3 more)
protocols/OT-Flex/ColonyPlayground/Taha's Code/: BCA microplate
protocols/OT-Flex/supernatant_removal/: README.md  supernatant_removal.py
tools/OT2-Colony-Picking/: POETRY_SETUP.md  README.md  instructions.md  pyproject.toml
tools/OT2-Colony-Picking/colony_picking/: colony_pick_generator.py
tools/OT2-Colony-Picking/colony_picking/data/: colony_pick_template.py  colony_pick_template_test.py  settings.yaml
tools/OT2-Colony-Picking/colony_picking/data/example_codes/: colony_pick_dual_color_protocol.py  colony_pick_single_color_protocol.py
tools/OT2-Colony-Picking/examples/agar_plate_csv/: Agar_plate_test.csv
tools/OT2-Colony-Picking/examples/culture_block_csv/: culture_block_dual_color.csv
tools/OT2-Colony-Picking/examples/custom labware/point_for_colony_picking/: point_for_colony_picking.json  test_point_for_colony_picking.py
(+4 files in other folders)
